<resources>
    <string name="app_name">x-lottery</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_about">关于应用</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_sync">同步</string>
    <string name="action_search">搜索</string>
    <string name="action_search_hint">游戏关键字</string>
    <string name="start">立即体验</string>

    <string name="menu_game_history">游戏记录</string>
    <string name="menu_security">安全中心</string>
    <string name="menu_account_flow">账户明细</string>
    <string name="menu_deposit_history">充值记录</string>
    <string name="menu_share">VIP分享</string>
    <string name="menu_wallet">钱包管理</string>
    <string name="menu_msg">消息中心</string>
    <string name="menu_wiki">意见与反馈</string>
    <string name="menu_gift">分享礼金</string>
    <string name="menu_sister">联系客服</string>
    <string name="menu_about">关于1号</string>

    <string name="menu_game_history_desc">查看所有参与游戏记录</string>
    <string name="menu_security_desc">保护您的账户安全</string>
    <string name="menu_account_flow_desc">查看账户资金变动明细</string>
    <string name="menu_deposit_history_desc">查看所有充值订单</string>
    <string name="menu_share_desc">赢取现金奖励</string>
    <string name="menu_wallet_desc">用户账户资金管理</string>
    <string name="menu_msg_desc">查看历史消息内容</string>
    <string name="menu_wiki_desc">解答各种问题</string>
    <string name="menu_gift_desc">查看奖励金额</string>
    <string name="menu_sister_desc">联系在线客服</string>
    <string name="menu_about_desc">检测更新版本</string>

    <string name="menu_deposit">充值</string>
    <string name="menu_withdrawal">提现</string>
    <string name="common_user">普通用户</string>
    <string name="go_login">注册/登录</string>
    <string name="user_account">账号:{account}</string>
    <string name="user_nickname">昵称:{nickname}</string>
    <string name="user_id">I    D:{id}</string>
    <string name="user_verify_code">邀请码:{verify_code}</string>
    <string name="user_balance_desc">账户余额</string>

    <string name="type_instant_lottery">时时彩</string>
    <string name="code_chong_qing_a">重庆时时彩A盘</string>
    <string name="code_chong_qing_b">重庆时时彩B盘</string>
    <string name="code_happy_a">快乐时时彩A盘</string>
    <string name="code_happy_b">快乐时时彩B盘</string>
    <string name="code_australia_a">澳洲时时彩A盘</string>
    <string name="code_australia_b">澳洲时时彩B盘</string>

    <string name="type_5_in_11">11选5</string>
    <string name="code_guang_dong_5_in_11">广东11选5</string>
    <string name="code_australia_5_in_11">澳洲11选5</string>
    <string name="code_shan_dong_5_in_11">山东11选5</string>
    <string name="code_jiang_xi_5_in_11">江西11选5</string>
    <string name="code_bei_jing_5_in_11">北京11选5</string>
    <string name="code_happy_5_in_11">快乐11选5</string>

    <string name="type_quick_3">快三</string>
    <string name="code_jiang_su_quick_3">江苏快三</string>
    <string name="code_australia_quick_3">澳洲快三</string>
    <string name="code_hu_bei_quick_3">湖北快三</string>
    <string name="code_fu_jian__quick_3">福建快三</string>
    <string name="code_bei_jing_quick_3">北京快三</string>
    <string name="code_happy_quick_3">快乐快三</string>

    <string name="type_bei_jing_racing">北京赛车</string>
    <string name="code_bei_jing_racing_a">北京赛车A盘</string>
    <string name="code_bei_jing_racing_b">北京赛车B盘</string>
    <string name="code_bei_jing_racing_c">北京赛车C盘</string>

    <string name="type_happy_quick_ship">快乐快艇</string>
    <string name="code_happy_quick_ship_a">快乐快艇A盘</string>
    <string name="code_happy_quick_ship_b">快乐快艇B盘</string>

    <string name="type_f_1">F1赛车</string>
    <string name="code_australia_f_1_a">澳洲F1A盘</string>
    <string name="code_australia_f_1_b">澳洲F1B盘</string>

    <string name="type_bei_jing_happy_8">北京快乐8</string>
    <string name="code_bei_jing_happy_8">北京</string>
    <string name="code_australia_act_happy_8">澳洲ACT</string>

    <string name="type_niu_niu">牛牛</string>

    <string name="type_hk_lottery">香港彩</string>
    <string name="code_happy_5_score_hk_lottery">快乐5分</string>
    <string name="code_australia_165_lottery">澳洲165</string>

    <string name="type_mark_6">香港彩</string>
    <string name="type_keno">KENO</string>
    <string name="type_hai_nan_7_star">海南七星彩</string>
    <string name="type_double_colorful_ball">双色球</string>
    <string name="type_lottery_3d">福彩3D</string>
    <string name="type_sequence_3_5">排列3/5</string>
    <string name="type_chatting">聊天室</string>

    <string name="high_frequency">高频彩</string>
    <string name="low_frequency">低频彩</string>
    <string name="nope"></string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
